--- a/app/Presenters/templates/Homepage/default.latte
+++ b/app/Presenters/templates/Homepage/default.latte
@@ -1,2 +1,4 @@
 Ahoj světe :)
 <a href="{link Test:default}"">test</a>
+<a href="{link User:register}"">register</a>
+<a href="{link User:login}"">login</a>
